# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "gona_stake"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["BukiOffor <ebuka2264@yahoo.com>"]

[features]
default = ["std"]
std = ["concordium-std/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
concordium-std = { version = "10.1.0" }
concordium-cis2 = {version = "6.1.0"}
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }
concordium-contracts-common = "9.2.0"


[dev-dependencies]
concordium-smart-contract-testing = "4.2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1

[workspace]
members = [
    "deploy-scripts"
]